--- a/src/styles/general.scss
+++ b/src/styles/general.scss
@@ -15,6 +15,10 @@ header{
     border-bottom: 2px solid #1a1a1a;
     padding: 15px 0 0;
     background: #b10000;
+
+    .logo{
+        max-width: 100%;
+    }
 }
 
 .body-content{
