--- a/src/styles/general.scss
+++ b/src/styles/general.scss
@@ -35,7 +35,7 @@ header{
 }
 
 h1 {
-    color: #b10000;
+    color: #de3838;
     font-size: 36px;
 }
 .body-content{
@@ -55,7 +55,7 @@ h1 {
 }
 
 a, a:hover, a:visited{
-    color: #b10000;
+    color: #de3838;
     text-decoration: none;
 }
 .biljettinfo{
