--- a/src/styles/general.scss
+++ b/src/styles/general.scss
@@ -68,6 +68,7 @@ a, a:hover, a:visited{
 footer{
     width: 100%;
     color: #fff;
+    padding-bottom: 40px;
 }
 @media (max-width: 768px){
     .right-side{
