--- a/src/styles/general.scss
+++ b/src/styles/general.scss
@@ -63,6 +63,13 @@ a, a:hover, a:visited{
     &.open{
         display: block;
     }
+
+    background-color: #6e1601;
+    color: #dddddd;
+    border: 5px solid #430800;
+    border-radius: 10px;
+    padding: 10px;
+    margin: 40px 0;
 }
 
 footer{
